# libtinyc

./: 0Temp.c  Readme.md  main.c  meson.build  test_main.c  test_main.h  tinyc.pro
etk/: csingleinstance.c  csingleinstance.h  etkaction.c  etkaction.h  etkwidget.c  etkwidget.h  libetk.h  libsocket.c  libsocket.h
lib/: cdirent.c  cdirent.h  cdirparser.c  cdirparser.h  cfile.c  cfile.h  cfileinfo.c  cfileinfo.h  cinifile.c  cinifile.h  ciniline.c  ciniline.h  cinisection.c  cinisection.h  clist.c  clist.h  cmacro.h  cprocess.c  cprocess.h  cregexp.c  cregexp.h  cstring.c  cstring.h  cstringlist.c  cstringlist.h  deletefunc.h  etkaction.c  etkaction.h  etype.h  general.c  libapp.c  libapp.h  libconv.c  libconv.h  libhtml.c  libhtml.h  libmacros.h  libpath.c  libpath.h  libstr.c  (+6 more)
other/: libetk.c  libetk.h  libhtml.c
test/: test01_cstring.c  test02_cstringlist.c  test03_clist.c  test04_cfile.c  test05_cfileinfo.c  test06_cdirent.c  test07_cdirparser.c  test08_cinifile.c  test09_cprocess.c  test10_libapp.c  test11_libhtml.c  test12_libpath.c  test13_libstr.c  test_cdirent.c  test_cdirparser.c  test_cfile.c  test_cfileinfo.c  test_cinifile.c  test_clist.c  test_cprocess.c  test_cstring.c  test_cstringlist.c  test_libapp.c  test_libhtml.c  test_libpath.c  test_libstr.c
